--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 TextBuddy/test.txt
+TextBuddy/build/
 TextBuddy/build/classes/.netbeans_update_resources
 TextBuddy/build/classes/.netbeans_automatic_build
 TextBuddy/build/built-jar.properties
