Made TextBuddy OOP.
Text management methods moved to TextBuddyLogic class.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ TextBuddy/build/classes/.netbeans_automatic_build
 TextBuddy/build/built-jar.properties
 TextBuddy/build/test/results/TEST-textbuddy.TextBuddyTest.xml
 TextBuddy/build/
+/TextBuddy/dist/
