--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ TextBuddy/build/built-jar.properties
 TextBuddy/build/test/results/TEST-textbuddy.TextBuddyTest.xml
 TextBuddy/build/
 /TextBuddy/dist/
+TextBuddy/nbproject/
